[gd_scene load_steps=18 format=3 uid="uid://dpef8dstkwvve"]

[ext_resource type="Script" uid="uid://vsu0dbkm7onm" path="res://scenes/main scenes/Tutorial/TutorialEndGame/tutorial_end_game.gd" id="1_f22hd"]
[ext_resource type="Shader" uid="uid://tvpfvluk8hvf" path="res://scenes/Menu/fracture_background.gdshader" id="2_21ngf"]
[ext_resource type="Texture2D" uid="uid://ccwuigx8bnpsp" path="res://assets/background/Fratura_central.jpg" id="3_efo8e"]
[ext_resource type="PackedScene" uid="uid://se8i2us8xx1p" path="res://scenes/main scenes/Match/pause_button.tscn" id="4_k76tn"]
[ext_resource type="Script" uid="uid://bldjsxufh4kax" path="res://scenes/main scenes/Tutorial/TutorialForge2/player_hand_forge2.gd" id="5_a6llk"]
[ext_resource type="PackedScene" uid="uid://dapf7tew78ua2" path="res://scenes/Cards/card_manager.tscn" id="6_fjnml"]
[ext_resource type="StyleBox" uid="uid://b1glg7x2bravg" path="res://assets/Themes/textBox.tres" id="7_52u2y"]
[ext_resource type="Script" uid="uid://5hv4pjs1xcht" path="res://addons/richtext2/text_effects/anims/rte_fader.gd" id="8_k76tn"]
[ext_resource type="PackedScene" uid="uid://caj23gmo4lj52" path="res://scenes/main scenes/Match/clock.tscn" id="9_22whi"]
[ext_resource type="Script" uid="uid://b6mbstaftpedd" path="res://addons/richtext2/rich_text_animation.gd" id="9_a6llk"]
[ext_resource type="Texture2D" uid="uid://dqj57she863dn" path="res://assets/sprites/Slots/Quarzto.png" id="10_21ngf"]
[ext_resource type="Script" uid="uid://blbnr8uytp6fl" path="res://scenes/main scenes/Tutorial/TutorialEndGame/deck_end_game.gd" id="10_efo8e"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fl4o3"]
shader = ExtResource("2_21ngf")
shader_parameter/speed = 1.0
shader_parameter/intensity = 1.5

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bdvic"]

[sub_resource type="RichTextEffect" id="RichTextEffect_fjnml"]
resource_name = "fader"
script = ExtResource("8_k76tn")
metadata/rt = 5068900358709

[sub_resource type="RichTextEffect" id="RichTextEffect_52u2y"]
resource_name = "fader"
script = ExtResource("8_k76tn")
metadata/rt = 5375973743989

[sub_resource type="LabelSettings" id="LabelSettings_efo8e"]
line_spacing = 0.0
font_size = 50
outline_size = 5
outline_color = Color(0, 0, 0, 1)
shadow_size = 0

[node name="TutorialEndGame" type="Node2D"]
script = ExtResource("1_f22hd")

[node name="Fundo" type="Sprite2D" parent="."]
z_index = -10
material = SubResource("ShaderMaterial_fl4o3")
position = Vector2(960, 540)
scale = Vector2(1.388, 1.388)
texture = ExtResource("3_efo8e")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
custom_minimum_size = Vector2(1920, 1090)
offset_right = 40.0
offset_bottom = 40.0
color = Color(0, 0, 0, 0.501961)

[node name="ContinueButton" type="Button" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1741.0
offset_top = 987.0
offset_right = 1870.0
offset_bottom = 1030.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 25
text = "Continuar"

[node name="PauseButton" parent="." instance=ExtResource("4_k76tn")]
z_index = -1

[node name="ReturnButton" type="Button" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 987.0
offset_right = 179.0
offset_bottom = 1030.0
grow_vertical = 0
theme_override_font_sizes/font_size = 25
text = "Voltar"

[node name="PlayerHandForge2" type="Node2D" parent="."]
position = Vector2(960, 1080)
script = ExtResource("5_a6llk")

[node name="Area2D" type="Area2D" parent="PlayerHandForge2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHandForge2/Area2D"]
shape = SubResource("RectangleShape2D_bdvic")

[node name="CardManager" parent="." instance=ExtResource("6_fjnml")]

[node name="TextBox" type="RichTextLabel" parent="."]
clip_contents = false
custom_minimum_size = Vector2(0, 220)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1191.0
offset_top = 236.0
offset_right = 1677.0
offset_bottom = 468.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0.2, 0.2, 0.2, 1)
theme_override_font_sizes/bold_italics_font_size = 40
theme_override_font_sizes/italics_font_size = 40
theme_override_font_sizes/mono_font_size = 40
theme_override_font_sizes/normal_font_size = 40
theme_override_font_sizes/bold_font_size = 40
theme_override_styles/normal = ExtResource("7_52u2y")
bbcode_enabled = true
fit_content = true
custom_effects = [SubResource("RichTextEffect_fjnml")]
script = ExtResource("9_a6llk")
progress = 1.0
visible_character = 67
_transforms = Array[Transform2D]([Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 31, 49), Transform2D(1, 0, 0, 1, 55, 49), Transform2D(1, 0, 0, 1, 75, 49), Transform2D(1, 0, 0, 1, 98, 49), Transform2D(1, 0, 0, 1, 120.667, 49), Transform2D(1, 0, 0, 1, 138.667, 49), Transform2D(1, 0, 0, 1, 161.667, 49), Transform2D(1, 0, 0, 1, 181.667, 49), Transform2D(1, 0, 0, 1, 204.667, 49), Transform2D(1, 0, 0, 1, 228.667, 49), Transform2D(1, 0, 0, 1, 252.667, 49), Transform2D(1, 0, 0, 1, 275.333, 49), Transform2D(1, 0, 0, 1, 301.333, 49), Transform2D(1, 0, 0, 1, 339.333, 49), Transform2D(1, 0, 0, 1, 362.333, 49), Transform2D(1, 0, 0, 1, 385, 49), Transform2D(1, 0, 0, 1, 411, 49), Transform2D(1, 0, 0, 1, 435, 49), Transform2D(1, 0, 0, 1, 457, 49), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 6, 104), Transform2D(1, 0, 0, 1, 26, 104), Transform2D(1, 0, 0, 1, 49, 104), Transform2D(1, 0, 0, 1, 67, 104), Transform2D(1, 0, 0, 1, 82, 104), Transform2D(1, 0, 0, 1, 106, 104), Transform2D(1, 0, 0, 1, 134, 104), Transform2D(1, 0, 0, 1, 158, 104), Transform2D(1, 0, 0, 1, 183, 104), Transform2D(1, 0, 0, 1, 199, 104), Transform2D(1, 0, 0, 1, 223, 104), Transform2D(1, 0, 0, 1, 261, 104), Transform2D(1, 0, 0, 1, 285, 104), Transform2D(1, 0, 0, 1, 300, 104), Transform2D(1, 0, 0, 1, 311, 104), Transform2D(1, 0, 0, 1, 331, 104), Transform2D(1, 0, 0, 1, 354, 104), Transform2D(1, 0, 0, 1, 393, 104), Transform2D(1, 0, 0, 1, 416, 104), Transform2D(1, 0, 0, 1, 441, 104), Transform2D(1, 0, 0, 1, 457, 104), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 6, 159), Transform2D(1, 0, 0, 1, 31, 159), Transform2D(1, 0, 0, 1, 57, 159), Transform2D(1, 0, 0, 1, 80, 159), Transform2D(1, 0, 0, 1, 105, 159), Transform2D(1, 0, 0, 1, 130, 159), Transform2D(1, 0, 0, 1, 155, 159), Transform2D(1, 0, 0, 1, 209, 159), Transform2D(1, 0, 0, 1, 229, 159), Transform2D(1, 0, 0, 1, 254, 159), Transform2D(1, 0, 0, 1, 292, 159), Transform2D(1, 0, 0, 1, 315, 159), Transform2D(1, 0, 0, 1, 335, 159), Transform2D(1, 0, 0, 1, 358, 159), Transform2D(1, 0, 0, 1, 412, 159), Transform2D(1, 0, 0, 1, 432, 159), Transform2D(1, 0, 0, 1, 455, 159), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 6, 214), Transform2D(1, 0, 0, 1, 22, 214), Transform2D(1, 0, 0, 1, 48, 214), Transform2D(1, 0, 0, 1, 65, 214), Transform2D(1, 0, 0, 1, 90, 214), Transform2D(1, 0, 0, 1, 115, 214)])
_char_size = Array[Vector2]([Vector2(0, 0), Vector2(23, 31), Vector2(19, 31), Vector2(22, 31), Vector2(0, 31), Vector2(16, 31), Vector2(22, 31), Vector2(19, 31), Vector2(22, 31), Vector2(22, 31), Vector2(22, 31), Vector2(0, 31), Vector2(22, 31), Vector2(35, 31), Vector2(22, 31), Vector2(0, 31), Vector2(22, 31), Vector2(23, 31), Vector2(24, 31), Vector2(22, 31), Vector2(0, 0), Vector2(19, 31), Vector2(22, 31), Vector2(16, 31), Vector2(17, 31), Vector2(22, 31), Vector2(0, 31), Vector2(22, 31), Vector2(22, 31), Vector2(17, 31), Vector2(23, 31), Vector2(35, 31), Vector2(22, 31), Vector2(17, 31), Vector2(8, 31), Vector2(19, 31), Vector2(22, 31), Vector2(35, 31), Vector2(22, 31), Vector2(22, 31), Vector2(17, 31), Vector2(22, 31), Vector2(0, 0), Vector2(22, 31), Vector2(22, 31), Vector2(22, 31), Vector2(22, 31), Vector2(22, 31), Vector2(23, 31), Vector2(0, 31), Vector2(19, 31), Vector2(23, 31), Vector2(35, 31), Vector2(22, 31), Vector2(19, 31), Vector2(22, 31), Vector2(0, 31), Vector2(19, 31), Vector2(22, 31), Vector2(22, 31), Vector2(0, 0), Vector2(17, 31), Vector2(22, 31), Vector2(16, 31), Vector2(22, 31), Vector2(23, 31), Vector2(0, 31)])
_alpha = Array[float]([1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0])
_alpha_goal = Array[float]([1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0])
_forced_finish_delay = -0.0396567
default_wait_time = 1.0
play_on_bbcode = true
play_speed = 50.0
fade_out = false
fade_in_speed = 10.0
fade_out_speed = 120.0
ctc_offset = Vector2(1, -0.5)
ctc_on_finished = false
ctc_on_wait = false
shortcut_expression = true
shortcut_bookmark = true
signal_quotes = true
signal_stars = true
bbcode = "[fill]Você recebe uma nova carta automaticamente quando começa seu turno [/fill]"
effects = 2
alignment = 1
color = Color(1, 1, 1, 1)
emoji_scale = 1.0
font = ""
font_auto_setup = true
font_size = 40
font_bold_weight = 1.5
font_italics_slant = 0.25
font_italics_weight = -0.25
shadow_enabled = false
shadow_offset = 0.08
shadow_alpha = 0.25
shadow_outline_size = 0.1
outline_size = 0
outline_mode = 1
outline_adjust = 0.8
outline_hue_adjust = 0.0125
nicer_quotes_enabled = true
nicer_quotes_format = "“%s”"
markdown_enabled = true
markdown_format_bold = "[b]%s[]"
markdown_format_italics = "[i]%s[]"
markdown_format_bold_italics = "[bi]%s[]"
markdown_format_highlight = "[green;sin]%s[]"
markdown_format_bold2 = "[b]*%s*[]"
markdown_format_italics2 = "[i;gray]*%s*[]"
markdown_format_bold_italics2 = "%s"
context_enabled = true
context_path = NodePath("/root/State")
context_state = {}
context_rich_objects = true
context_rich_ints = true
context_rich_array = true
autostyle_numbers = false
autostyle_numbers_tag = "%s"
autostyle_numbers_pad_decimals = false
autostyle_numbers_decimals = 2
autostyle_emojis = true
effect_weight = 0.0
image_path = "res://"
image_resize_to_font_size = true
image_scale = 1.0
meta_auto_https = true
meta_cursor = 2
override_bbcodeEnabled = true
override_clipContents = false
override_fitContent = true
metadata/_custom_type_script = "uid://b6mbstaftpedd"

[node name="TextBox2" type="RichTextLabel" parent="."]
clip_contents = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 400.0
offset_top = 389.0
offset_right = 1065.0
offset_bottom = 676.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0.2, 0.2, 0.2, 1)
theme_override_font_sizes/bold_italics_font_size = 40
theme_override_font_sizes/italics_font_size = 40
theme_override_font_sizes/mono_font_size = 40
theme_override_font_sizes/normal_font_size = 40
theme_override_font_sizes/bold_font_size = 40
theme_override_styles/normal = ExtResource("7_52u2y")
bbcode_enabled = true
fit_content = true
custom_effects = [SubResource("RichTextEffect_52u2y")]
script = ExtResource("9_a6llk")
progress = 1.0
visible_character = 132
_transforms = Array[Transform2D]([Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 32, 49), Transform2D(1, 0, 0, 1, 52, 49), Transform2D(1, 0, 0, 1, 71, 49), Transform2D(1, 0, 0, 1, 83, 49), Transform2D(1, 0, 0, 1, 121, 49), Transform2D(1, 0, 0, 1, 145.5, 49), Transform2D(1, 0, 0, 1, 170.5, 49), Transform2D(1, 0, 0, 1, 196.5, 49), Transform2D(1, 0, 0, 1, 219.5, 49), Transform2D(1, 0, 0, 1, 244, 49), Transform2D(1, 0, 0, 1, 269, 49), Transform2D(1, 0, 0, 1, 293, 49), Transform2D(1, 0, 0, 1, 310, 49), Transform2D(1, 0, 0, 1, 333, 49), Transform2D(1, 0, 0, 1, 344, 49), Transform2D(1, 0, 0, 1, 370, 49), Transform2D(1, 0, 0, 1, 394, 49), Transform2D(1, 0, 0, 1, 418.5, 49), Transform2D(1, 0, 0, 1, 443.5, 49), Transform2D(1, 0, 0, 1, 466.5, 49), Transform2D(1, 0, 0, 1, 491, 49), Transform2D(1, 0, 0, 1, 511, 49), Transform2D(1, 0, 0, 1, 536, 49), Transform2D(1, 0, 0, 1, 574, 49), Transform2D(1, 0, 0, 1, 599, 49), Transform2D(1, 0, 0, 1, 616, 49), Transform2D(1, 0, 0, 1, 639, 49), Transform2D(1, 0, 0, 1, 174, 104), Transform2D(1, 0, 0, 1, 6, 104), Transform2D(1, 0, 0, 1, 30, 104), Transform2D(1, 0, 0, 1, 49, 104), Transform2D(1, 0, 0, 1, 73, 104), Transform2D(1, 0, 0, 1, 98, 104), Transform2D(1, 0, 0, 1, 121, 104), Transform2D(1, 0, 0, 1, 138, 104), Transform2D(1, 0, 0, 1, 149, 104), Transform2D(1, 0, 0, 1, 171, 104), Transform2D(1, 0, 0, 1, 196, 104), Transform2D(1, 0, 0, 1, 218, 104), Transform2D(1, 0, 0, 1, 230, 104), Transform2D(1, 0, 0, 1, 254, 104), Transform2D(1, 0, 0, 1, 276, 104), Transform2D(1, 0, 0, 1, 299, 104), Transform2D(1, 0, 0, 1, 324, 104), Transform2D(1, 0, 0, 1, 349, 104), Transform2D(1, 0, 0, 1, 366, 104), Transform2D(1, 0, 0, 1, 388, 104), Transform2D(1, 0, 0, 1, 413, 104), Transform2D(1, 0, 0, 1, 439, 104), Transform2D(1, 0, 0, 1, 462, 104), Transform2D(1, 0, 0, 1, 484, 104), Transform2D(1, 0, 0, 1, 504, 104), Transform2D(1, 0, 0, 1, 529, 104), Transform2D(1, 0, 0, 1, 567, 104), Transform2D(1, 0, 0, 1, 592, 104), Transform2D(1, 0, 0, 1, 609, 104), Transform2D(1, 0, 0, 1, 634, 104), Transform2D(1, 0, 0, 1, 181, 159), Transform2D(1, 0, 0, 1, 6, 159), Transform2D(1, 0, 0, 1, 21, 159), Transform2D(1, 0, 0, 1, 44, 159), Transform2D(1, 0, 0, 1, 61, 159), Transform2D(1, 0, 0, 1, 85, 159), Transform2D(1, 0, 0, 1, 97.5, 159), Transform2D(1, 0, 0, 1, 122.5, 159), Transform2D(1, 0, 0, 1, 135, 159), Transform2D(1, 0, 0, 1, 160, 159), Transform2D(1, 0, 0, 1, 183, 159), Transform2D(1, 0, 0, 1, 209, 159), Transform2D(1, 0, 0, 1, 234, 159), Transform2D(1, 0, 0, 1, 245, 159), Transform2D(1, 0, 0, 1, 261, 159), Transform2D(1, 0, 0, 1, 272, 159), Transform2D(1, 0, 0, 1, 310, 159), Transform2D(1, 0, 0, 1, 335, 159), Transform2D(1, 0, 0, 1, 347.5, 159), Transform2D(1, 0, 0, 1, 363.5, 159), Transform2D(1, 0, 0, 1, 389.5, 159), Transform2D(1, 0, 0, 1, 406.5, 159), Transform2D(1, 0, 0, 1, 431.5, 159), Transform2D(1, 0, 0, 1, 456.5, 159), Transform2D(1, 0, 0, 1, 466.5, 159), Transform2D(1, 0, 0, 1, 479, 159), Transform2D(1, 0, 0, 1, 504, 159), Transform2D(1, 0, 0, 1, 527, 159), Transform2D(1, 0, 0, 1, 539, 159), Transform2D(1, 0, 0, 1, 561, 159), Transform2D(1, 0, 0, 1, 584, 159), Transform2D(1, 0, 0, 1, 609, 159), Transform2D(1, 0, 0, 1, 634, 159), Transform2D(1, 0, 0, 1, 186, 214), Transform2D(1, 0, 0, 1, 6, 214), Transform2D(1, 0, 0, 1, 31, 214), Transform2D(1, 0, 0, 1, 57, 214), Transform2D(1, 0, 0, 1, 80, 214), Transform2D(1, 0, 0, 1, 107, 214), Transform2D(1, 0, 0, 1, 132, 214), Transform2D(1, 0, 0, 1, 159, 214), Transform2D(1, 0, 0, 1, 184, 214), Transform2D(1, 0, 0, 1, 209, 214), Transform2D(1, 0, 0, 1, 225, 214), Transform2D(1, 0, 0, 1, 242, 214), Transform2D(1, 0, 0, 1, 267, 214), Transform2D(1, 0, 0, 1, 294, 214), Transform2D(1, 0, 0, 1, 306, 214), Transform2D(1, 0, 0, 1, 330, 214), Transform2D(1, 0, 0, 1, 352, 214), Transform2D(1, 0, 0, 1, 375, 214), Transform2D(1, 0, 0, 1, 400, 214), Transform2D(1, 0, 0, 1, 425, 214), Transform2D(1, 0, 0, 1, 442, 214), Transform2D(1, 0, 0, 1, 469, 214), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 495, 214), Transform2D(1, 0, 0, 1, 520, 214), Transform2D(1, 0, 0, 1, 544, 214), Transform2D(1, 0, 0, 1, 555, 214), Transform2D(1, 0, 0, 1, 566, 214), Transform2D(1, 0, 0, 1, 585, 214), Transform2D(1, 0, 0, 1, 608, 214), Transform2D(1, 0, 0, 1, 635, 214), Transform2D(1, 0, 0, 1, 179, 269), Transform2D(1, 0, 0, 1, 6, 269), Transform2D(1, 0, 0, 1, 31, 269), Transform2D(1, 0, 0, 1, 55, 269), Transform2D(1, 0, 0, 1, 72, 269), Transform2D(1, 0, 0, 1, 87, 269), Transform2D(1, 0, 0, 1, 99, 269), Transform2D(1, 0, 0, 1, 124, 269), Transform2D(1, 0, 0, 1, 147, 269), Transform2D(1, 0, 0, 1, 158, 269)])
_char_size = Array[Vector2]([Vector2(0, 0), Vector2(19, 31), Vector2(19, 31), Vector2(8, 31), Vector2(35, 31), Vector2(0, 31), Vector2(22, 31), Vector2(22, 31), Vector2(22, 31), Vector2(0, 31), Vector2(22, 31), Vector2(22, 31), Vector2(16, 31), Vector2(22, 31), Vector2(7, 31), Vector2(22, 31), Vector2(23, 31), Vector2(0, 31), Vector2(22, 31), Vector2(22, 31), Vector2(0, 31), Vector2(19, 31), Vector2(23, 31), Vector2(35, 31), Vector2(22, 31), Vector2(16, 31), Vector2(22, 31), Vector2(19, 31), Vector2(0, 31), Vector2(22, 31), Vector2(19, 31), Vector2(22, 31), Vector2(22, 31), Vector2(22, 31), Vector2(16, 31), Vector2(10, 31), Vector2(0, 31), Vector2(23, 31), Vector2(0, 31), Vector2(14, 31), Vector2(23, 31), Vector2(24, 31), Vector2(22, 31), Vector2(22, 31), Vector2(23, 31), Vector2(16, 31), Vector2(0, 31), Vector2(22, 31), Vector2(22, 31), Vector2(22, 31), Vector2(0, 31), Vector2(19, 31), Vector2(23, 31), Vector2(35, 31), Vector2(22, 31), Vector2(16, 31), Vector2(23, 31), Vector2(22, 31), Vector2(0, 31), Vector2(19, 31), Vector2(22, 31), Vector2(16, 31), Vector2(22, 31), Vector2(0, 31), Vector2(23, 31), Vector2(0, 31), Vector2(22, 31), Vector2(22, 31), Vector2(22, 31), Vector2(22, 31), Vector2(7, 31), Vector2(17, 31), Vector2(8, 31), Vector2(35, 31), Vector2(23, 31), Vector2(0, 31), Vector2(17, 31), Vector2(22, 31), Vector2(16, 31), Vector2(22, 31), Vector2(23, 31), Vector2(10, 31), Vector2(0, 31), Vector2(22, 31), Vector2(22, 31), Vector2(8, 31), Vector2(24, 31), Vector2(22, 31), Vector2(22, 31), Vector2(22, 31), Vector2(23, 31), Vector2(0, 31), Vector2(22, 31), Vector2(22, 31), Vector2(22, 31), Vector2(0, 31), Vector2(23, 31), Vector2(0, 31), Vector2(23, 31), Vector2(22, 31), Vector2(17, 31), Vector2(16, 31), Vector2(23, 31), Vector2(0, 31), Vector2(14, 31), Vector2(23, 31), Vector2(24, 31), Vector2(22, 31), Vector2(22, 31), Vector2(23, 31), Vector2(16, 31), Vector2(0, 31), Vector2(25, 31), Vector2(0, 0), Vector2(22, 31), Vector2(22, 31), Vector2(7, 31), Vector2(8, 31), Vector2(19, 31), Vector2(22, 31), Vector2(0, 31), Vector2(22, 31), Vector2(0, 31), Vector2(22, 31), Vector2(22, 31), Vector2(16, 31), Vector2(17, 31), Vector2(8, 31), Vector2(22, 31), Vector2(22, 31), Vector2(9, 31), Vector2(0, 31)])
_alpha = Array[float]([1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0])
_alpha_goal = Array[float]([1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0])
_forced_finish_delay = -0.0443394
default_wait_time = 1.0
play_on_bbcode = true
play_speed = 50.0
fade_out = false
fade_in_speed = 10.0
fade_out_speed = 120.0
ctc_offset = Vector2(1, -0.5)
ctc_on_finished = false
ctc_on_wait = false
shortcut_expression = true
shortcut_bookmark = true
signal_quotes = true
signal_stars = true
bbcode = "[fill]Assim que baralho de compras acabar, o jogador que comprou fará o penúltimo turno, deixando que o outro jogador finalize a partida. [/fill]"
effects = 2
alignment = 1
color = Color(1, 1, 1, 1)
emoji_scale = 1.0
font = ""
font_auto_setup = true
font_size = 40
font_bold_weight = 1.5
font_italics_slant = 0.25
font_italics_weight = -0.25
shadow_enabled = false
shadow_offset = 0.08
shadow_alpha = 0.25
shadow_outline_size = 0.1
outline_size = 0
outline_mode = 1
outline_adjust = 0.8
outline_hue_adjust = 0.0125
nicer_quotes_enabled = true
nicer_quotes_format = "“%s”"
markdown_enabled = true
markdown_format_bold = "[b]%s[]"
markdown_format_italics = "[i]%s[]"
markdown_format_bold_italics = "[bi]%s[]"
markdown_format_highlight = "[green;sin]%s[]"
markdown_format_bold2 = "[b]*%s*[]"
markdown_format_italics2 = "[i;gray]*%s*[]"
markdown_format_bold_italics2 = "%s"
context_enabled = true
context_path = NodePath("/root/State")
context_state = {}
context_rich_objects = true
context_rich_ints = true
context_rich_array = true
autostyle_numbers = false
autostyle_numbers_tag = "%s"
autostyle_numbers_pad_decimals = false
autostyle_numbers_decimals = 2
autostyle_emojis = true
effect_weight = 0.0
image_path = "res://"
image_resize_to_font_size = true
image_scale = 1.0
meta_auto_https = true
meta_cursor = 2
override_bbcodeEnabled = true
override_clipContents = false
override_fitContent = true
metadata/_custom_type_script = "uid://b6mbstaftpedd"

[node name="Clock" parent="." instance=ExtResource("9_22whi")]
offset_left = 1691.5
offset_top = 476.0
offset_right = 1827.5
offset_bottom = 612.0

[node name="Deck" type="Node2D" parent="."]
position = Vector2(180, 540)
script = ExtResource("10_efo8e")

[node name="Sprite2D" type="Sprite2D" parent="Deck"]
modulate = Color(1, 1, 1, 0.74902)
scale = Vector2(0.132258, 0.124358)
texture = ExtResource("10_21ngf")

[node name="Label" type="Label" parent="Deck"]
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -27.0
offset_top = -27.0
offset_right = 27.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "0"
label_settings = SubResource("LabelSettings_efo8e")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[connection signal="button_up" from="ContinueButton" to="." method="_on_continue_button_button_up"]
[connection signal="button_up" from="ReturnButton" to="." method="_on_return_button_button_up"]
